Fixed hamburger dropdown and alignment issue of simple menu

--- a/src/css/view/simple-menu.scss
+++ b/src/css/view/simple-menu.scss
@@ -109,7 +109,7 @@
 
         .eael-simple-menu-indicator {
             position: absolute;
-            top: 0;
+            top: 50%;
             right: 10px;
             width: 28px;
             height: 28px;
